--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,72 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
-    background-color: aqua;
+  font: bold 20px "Courier";
+}
+
+@bg-color: #b7d4a8;
+
+// mian container
+#main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 360px;
+  height: 420px;
+  background-color: @bg-color;
+  margin: 100px auto;
+  border: 10px solid #000;
+  border-radius: 30px;
+
+  #stage {
+    position: relative;
+    height: 304px;
+    width: 304px;
+    border: 2px solid #000;
+    // snake
+    #snake {
+      div {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: #000;
+        // margin: 1px;
+        border: 1px solid @bg-color;
+      }
+    }
+    // food
+    #food {
+      display: flex;
+      flex-wrap: wrap;
+      position: absolute;
+      top: 100px;
+      left: 40px;
+      width: 10px;
+      height: 10px;
+      div {
+        width: 4px;
+        height: 4px;
+        background-color: #000;
+        transform: rotate(45deg);
+      }
+    }
+  }
+
+  #msg-bar {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    div {
+      // flex: 1;
+      display: flex;
+      justify-content: center;
+      // span {
+      //     width: 70px;
+      // }
+    }
+  }
 }
